init: new method and route with get request (get all users)
